# Funcy

./: .gitignore  CMakeLists.txt  README.md  Tic_Tac_Toe3.7.py  grammer.txt  language_doc.md  language_doc2.0.md  library.cpp
include/: ast_printer.h  context.h  environment.h  errorDefs.h  global_context.h  lexer.h  library.h  nodes.h  parser.h  pch.h  token.h  values.h
scripts/: example.fy  fibonacci.fy  fibonnaci.fy  invalid.fy  inventory.fy  language.fy  library.funcy  max.fy  poem.fy  python_ttt.funcy  save_file.json  test.func  test.funcy  test.fy  test_file.fy  tic_tac_toe.funcy  tic_tac_toe.fy
scripts/funcy_roguelike/: THEME_IMPLEMENTATION.md  config.fy  entities.fy  game.fy  ideas overview.md  intro.fy  main.fy  map.fy  test_depth_progression.fy  test_monster_glyphs.fy  test_themes.fy
src/: ast_printer.cpp  context.cpp  environment.cpp  errorsDefs.cpp  global_context.cpp  lexer.cpp  library.cpp  main.cpp  nodes.cpp  parser.cpp  token.cpp  values.cpp
